--- a/src/main/webapp/sistema/cadastroUsuario.xhtml
+++ b/src/main/webapp/sistema/cadastroUsuario.xhtml
@@ -29,7 +29,9 @@
 				update="form" />
 
 			<p:spacer />
-			<p:messages showDetail="false" autoUpdate="true" closable="true" severity="error" />
+			<p:messages showDetail="false" closable="true" severity="error">
+				<p:autoUpdate />
+			</p:messages>
 
 		</h:panelGrid>
 
