--- a/src/main/webapp/sistema/usuario.xhtml
+++ b/src/main/webapp/sistema/usuario.xhtml
@@ -31,7 +31,7 @@
 							<h:outputText value="#{usuario.id}" />
 						</f:facet>
 						<f:facet name="input">
-							<p:inputText value="#{usuario.id}" style="width:100%" />
+							<h:outputText value="#{usuario.id}" />
 						</f:facet>
 					</p:cellEditor>
 				</p:column>
