--- a/src/main/webapp/sistema/cadastroTela.xhtml
+++ b/src/main/webapp/sistema/cadastroTela.xhtml
@@ -22,7 +22,7 @@
 
 			<p:spacer />
 
-			<p:commandButton value="Salvar" id="btnSalvar" icon="ui-icon-gear" actionListener="#{telaController.salvar}"
+			<p:commandButton value="Salvar" id="btnSalvar" icon="fa fa-fw fa-save" actionListener="#{telaController.salvar}"
 				update="form" />
 
 			<p:spacer />
