--- a/src/main/webapp/vertv.xhtml
+++ b/src/main/webapp/vertv.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
 <f:metadata>
-	<f:event type="preRenderView" listener="#{indexController.onPageLoad}" />
+	<f:event type="preRenderView" listener="#{verTVController.onPageLoad}" />
 </f:metadata>
 <h:head>
 </h:head>
@@ -12,8 +12,8 @@
 <h:body style="margin: 0">
 	<h:form id="exibeTela">
 		<iframe style="display: block; background: #fff; border: none; height: 100vh; width: 100vw;"
-			src="//#{indexController.telaAtual.url}" frameborder="0" />
-		<p:poll interval="#{indexController.telaAtual.segundos}" listener="#{indexController.listener}" update="exibeTela" />
+			src="//#{verTVController.tela.url}" frameborder="0" />
+		<p:poll interval="#{verTVController.tela.segundos}" listener="#{verTVController.listener}" update="exibeTela" />
 	</h:form>
 
 </h:body>
