--- a/src/main/webapp/sistema/cadastroUsuario.xhtml
+++ b/src/main/webapp/sistema/cadastroUsuario.xhtml
@@ -2,8 +2,10 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
 
 	<h:form>
-
-		<h:panelGrid columns="2" cellpadding="10">
+		<p:messages showDetail="false" closable="true" severity="error">
+			<p:autoUpdate />
+		</p:messages>
+		<h:panelGrid columns="2" cellpadding="4">
 
 			<p:outputLabel value="Id" for="txtId" rendered="#{usuarioController.usuarioModel.id != null}" />
 			<p:inputText id="txtId" value="#{usuarioController.usuarioModel.id}" style="width:50px" readonly="true"
@@ -23,17 +25,12 @@
 				<f:selectItems value="#{usuarioController.tipos}"></f:selectItems>
 			</p:selectOneRadio>
 
-			<p:spacer />
-
+		</h:panelGrid>
+		<h:panelGrid columns="1" cellpadding="4">
 			<p:commandButton value="Salvar" id="btnSalvar" icon="fa fa-fw fa-save" actionListener="#{usuarioController.salvar}"
 				update="form" />
-
-			<p:spacer />
-			<p:messages showDetail="false" closable="true" severity="error">
-				<p:autoUpdate />
-			</p:messages>
-
 		</h:panelGrid>
+
 
 	</h:form>
 
