--- a/src/main/webapp/vertv.xhtml
+++ b/src/main/webapp/vertv.xhtml
@@ -12,7 +12,7 @@
 <h:body style="margin: 0">
 	<h:form id="exibeTela">
 		<iframe style="display: block; background: #fff; border: none; height: 100vh; width: 100vw;"
-			src="//#{verTVController.tela.url}" frameborder="0" />
+			src="//#{verTVController.tela.url}" frameborder="0" sandbox="allow-same-origin allow-scripts allow-popups allow-forms" />
 		<p:poll interval="#{verTVController.tela.segundos}" listener="#{verTVController.listener}" update="exibeTela" />
 	</h:form>
 
