--- a/src/main/webapp/sistema/alterarSenha.xhtml
+++ b/src/main/webapp/sistema/alterarSenha.xhtml
@@ -9,7 +9,7 @@
 <ui:composition template="/template/layoutBase.xhtml">
 
 	<ui:define name="content">
-		<div style="display: flex">
+		<div style="display: flex; height: 100%">
 			<h:form id="form" style="margin: auto">
 				<p:growl id="msgs" showDetail="true" globalOnly="true" />
 				<p:panel header="Alterar senha">
@@ -23,7 +23,7 @@
 						<p:outputLabel value="Nova" for="txtSenhaNova" />
 						<p:password id="txtSenhaNova" value="#{alterarSenhaController.nova}" required="true"
 							requiredMessage="A Senha Nova é de preenchimento obrigatório" feedback="true" promptLabel="Insira uma senha"
-							weakLabel="Fraca" goodLabel="Boa" strongLabel="Ótima" match="txtConfirmar"
+							weakLabel="Fraca" goodLabel="Boa" strongLabel="Ótima" match="txtConfirmar" 
 							validatorMessage="A Senha Nova e de Confirmação devem ser iguais" />
 						<p:outputLabel value="Confirmar" for="txtConfirmar" />
 						<p:password id="txtConfirmar" required="true"
@@ -33,6 +33,7 @@
 						<p:commandButton value="Alterar" action="#{alterarSenhaController.alterar}" update="form" />
 					</h:panelGrid>
 				</p:panel>
+				<p:poll widgetVar="poll" interval="2" autoStart="false" immediate="true" listener="#{alterarSenhaController.redirecionar}" />
 			</h:form>
 		</div>
 	</ui:define>
